fix: creates a modify able list
Refs: #196